<resources>
    <string name="app_name">Transactions by Leal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_transactions_list_fragment_search_transaction">Search Transaction</string>
    <string name="menu_transaction_fragment_sort_by">Sort By</string>
    <string name="menu_sort_by_transaction_fragment_date_asc">Date Asc</string>
    <string name="menu_sort_by_transaction_fragment_date_des">Date Des</string>
    <string name="menu_refresh_transaction_fragment_title">Refresh</string>
</resources>